Feature에 device 있을때 할당하면 Throw customException
ttc response 추가